Fixed Title spacing

--- a/packages/muze-legend/src/styles.scss
+++ b/packages/muze-legend/src/styles.scss
@@ -6,7 +6,7 @@ $prefix: muze-;
 
     line-height: 10px !important;
     height: 100px;
-    float: none !important;
+    // float: none !important;
     display: inline-block;
     border: solid rgba(0, 0, 0, 0);
 
